기존 쿼리 동적 쿼리로 재구성하여 주문, 주문취소 시 재고 증감 로직 구현
