# miniminishop/src/main/java/com/example/miniminishop/controller/handler/InsertOrderItemHandler.java
@@ -2,6 +2,7 @@ package com.example.miniminishop.controller.handler;
 
 import com.example.miniminishop.controller.request.*;
 import com.example.miniminishop.controller.response.*;
+import com.example.miniminishop.mapper.MiniminishopMapper;
 import com.example.miniminishop.mapper.MiniminishopMapperService;
 import com.example.miniminishop.service.CustomUserDetails;
 import lombok.RequiredArgsConstructor;
@@ -15,7 +16,7 @@ import java.util.List;
 @RequiredArgsConstructor
 public class InsertOrderItemHandler extends BaseHandler {
 
-  private final MiniminishopMapperService mapperService;
+  private final MiniminishopMapper mapper;
 
   public InsertOrderItemResponse execute(CustomUserDetails user, InsertOrderItemRequest req) {
     InsertOrderItemResponse res = new InsertOrderItemResponse();
@@ -33,8 +34,9 @@ public class InsertOrderItemHandler extends BaseHandler {
 
     try {
 
-      long orderitemId = mapperService.insertOrderItem(memberId, itemId, itemPrice, itemAmount, orderId);
-      mapperService.updateItemByOrderitem(itemId, itemAmount);
+      long orderitemId = mapper.insertOrderItem(memberId, itemId, itemPrice, itemAmount, orderId);
+      // type 0 : MINUS
+      mapper.updateItemByOrderitem(itemId, itemAmount, 0);
 
       res.setOrderitemId(orderitemId);
       res.setCode(ResultCode.Success);
